fix: margin and overflow

--- a/src/components/Header/HeaderMenu/headerMenu.css
+++ b/src/components/Header/HeaderMenu/headerMenu.css
@@ -24,7 +24,7 @@
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   border-radius: 10px;
   height: 250px;
   display: block;
@@ -35,4 +35,5 @@
   background: #f9f9f9;
   border: 1px solid #00000033;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
